# Optimize-schedule-app

./: .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs
src/algorithms/: checker.rs  mod.rs  models.rs  optimizer.rs
src/pso/: fitness.rs  mod.rs  optimizer.rs  particle.rs
